--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meine erste Webseite</title>
+    <title>Aufgabe 1.1</title>
 </head>
 <body>
-    hallo
+    <h1> Meine Person </h1>
+    
 </body>
 </html>
