--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <h1> Meine Person </h1>
-    <img src="Ich" Ich.jpeg>
-    
+    <img src= "Ich.jpeg">
+    <p> Das bin Ich </p>
+    <h1> Über Mich </h1>
+    <p>Ich heiße Leon Herrmann und bin 19 Jahre alt.</p>
+    <p> Ich studiere Medieninformatik an der Hochschule Furtwangen <a href="http://www.hs-furtwangen.de"></a>. </p>
+
+
+
+
 </body>
 </html>
