--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p> Das bin Ich </p>
     <h1> Über Mich </h1>
     <p>Ich heiße Leon Herrmann und bin 19 Jahre alt.</p>
-    <p> Ich studiere Medieninformatik an der Hochschule Furtwangen <a href="http://www.hs-furtwangen.de"></a>. </p>
+    <p> Ich studiere Medieninformatik an der <a href="http://www.hs-furtwangen.de">Hochschule Furtwangen</a>. </p>
 
 
 
