--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dignissimos quasi, laudantium iusto architecto soluta hic. Qui corrupti illo delectus alias accusantium veniam, mollitia enim exercitationem consequatur veritatis, assumenda minus?
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam tempora eum numquam eius debitis error quibusdam facere suscipit ab? Consequatur autem in eaque corrupti voluptatibus pariatur nemo molestiae nostrum suscipit?
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, facilis ab, sed optio sunt ratione doloribus quibusdam explicabo distinctio inventore, aut tenetur? Rem perferendis, quas repellendus unde eaque praesentium quaerat!</p>
-    <p> Hier kommst du zurück zu<a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/index.html#MeinePerson"> Meine Person</a>.  </p>
+    <p> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/index.html#MeinePerson"> Hier</a> kommst du zurück zum Anfang. </p>
 
 
 
