--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="MeinePerson"> Meine Person </h1>
-   <img src="/Dokumente/Ich.jpeg" alt="Leon">
+   <img src="/documents/github/Ich.jpeg" alt="Leon">
     <p>  Das bin Ich </p>
     <h1> Über Mich </h1>
     <p> Ich heiße Leon Herrmann und bin 19 Jahre alt.</p>
