--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="MeinePerson"> Meine Person </h1>
-   <img src="/Users/leon/Documents/GitHub/GIS-SoSe-2021/Ich.jpg" alt="Leon">
+    <img src="Ich.jpeg">
     <p>  Das bin Ich </p>
     <h1> Über Mich </h1>
     <p> Ich heiße Leon Herrmann und bin 19 Jahre alt.</p>
