--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -11,8 +11,8 @@
     <p>Servus auf der Website werden meine Arbeiten präsentiert</p>
     <p>Hier ein paar Beispiele:</p>
     <p>diese Tolle <a href="https://www.hochschwarzwald.de"> Website</a> ist nicht von mir gemacht.</p>
-    <img src="/Users/leon/Documents/GitHub/GIS-SoSe-2021/mountains-6058896_640.jpg" alt="Landschaftsbild">
-    <p>Hier sieht man ein schönes LAndschaftsbild.</p>
+    <img src="/Users/leon/Documents/GitHub/GIS-SoSe-2021/mountains-6058896_640.jpg">
+    <p>Hier sieht man ein schönes Landschaftsbild.</p>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
 </body>
 </html>
