--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1 id="MeineArbeiten">Meine Arbeiten</h1>
-    <p>Servus auf der Website werden meine Arbeiten präsentiert</p>
+    <p>Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
     <p>Hier ein paar Beispiele:</p>
     <p>diese Tolle <a href="https://www.hochschwarzwald.de"> Website</a> ist nicht von mir gemacht.</p>
     <img src="mountains-6058896_640.jpg">
     <p>Hier sieht man ein schönes Landschaftsbild.</p>
+    <video src="/Users/leon/Documents/GitHub/GIS-SoSe-2021/A.1.2/Bee - 39116.mp4"></video>
+    <p>Ein paar Bienen bewundern ist auch immer schön!</p>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
 </body>
 </html>
