--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -14,7 +14,7 @@
     <img src="mountains-6058896_640.jpg">
     <p>Hier sieht man ein schönes Landschaftsbild.</p>
     <video src="/Users/leon/Documents/GitHub/GIS-SoSe-2021/A.1.2/Bee - 39116.mp4"></video>
-    <p>Ein paar Bienen bewundern ist auch immer schön!</p>
+    <p>Ein paar <video src="/Users/leon/Documents/GitHub/GIS-SoSe-2021/A.1.2/Bee - 39116.mp4"> Bienen</video>  bewundern ist auch immer schön!</p>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
 </body>
 </html>
