--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -13,7 +13,7 @@
     <p>diese Tolle <a href="https://www.hochschwarzwald.de"> Website</a> ist nicht von mir gemacht.</p>
     <img src="mountains-6058896_640.jpg">
     <p>Hier sieht man ein schönes Landschaftsbild.</p>
-    <table> <thead> <th> <h1> Diese Tabelle ist hilfreich</h1></th></thead> <tbody> </tbody></table>
+    <table> <tr><thead> <th> <h1> Diese Tabelle ist hilfreich</h1></th></tr> </thead> <tr><tbody> <td> <p>hier ist der erste Eintrag</p></td> </tbody></tr></table>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
 </body>
 </html>
