--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -7,6 +7,8 @@
     <title>Aufgabe 1.2 </title>
 </head>
 <body>
+    <header> <nav>Hallo</nav></header>
+    <main>
     <h1 id="MeineArbeiten">Meine Arbeiten</h1>
     <p>Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
     <p>Hier ein paar Beispiele:</p>
@@ -14,5 +16,6 @@
     <img src="mountains-6058896_640.jpg">
     <p>Hier sieht man ein schönes Landschaftsbild.</p>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
+    </main>
 </body>
 </html>
