--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -7,7 +7,7 @@
     <title>Aufgabe 1.2 </title>
 </head>
 <body>
-    <header> <nav>Hallo</nav></header>
+    <header> <nav><p>Hallo</p></nav></header>
     <main>
     <h1 id="MeineArbeiten">Meine Arbeiten</h1>
     <p>Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
