--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -7,7 +7,7 @@
     <title>Aufgabe 1.2 </title>
 </head>
 <body>
-    <header> <nav><p>Hallo</p> <p>Potrait</p></nav></header>
+    <header> <nav><p>Hallo</p></nav></header>
     <main>
     <h1 id="MeineArbeiten">Meine Arbeiten</h1>
     <p>Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
@@ -15,6 +15,16 @@
     <p>diese Tolle <a href="https://www.hochschwarzwald.de"> Website</a> ist nicht von mir gemacht.</p>
     <img src="mountains-6058896_640.jpg">
     <p>Hier sieht man ein schönes Landschaftsbild.</p>
+    <table>
+        <tr>
+          <th>Month</th>
+          <th>Savings</th>
+        </tr>
+        <tr>
+          <td>January</td>
+          <td>$100</td>
+        </tr>
+      </table>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
     </main>
 </body>
