--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -15,17 +15,22 @@
     <p>diese Tolle <a href="https://www.hochschwarzwald.de"> Website</a> ist nicht von mir gemacht.</p>
     <img src="mountains-6058896_640.jpg">
     <p>Hier sieht man ein schönes Landschaftsbild.</p>
+    <p>ein Tabelle hab ich auch noch eingefügt</p>
     <table>
         <tr>
-          <th>Month</th>
-          <th>Savings</th>
+          <th>Samstag</th>
+          <th>Sonntag</th>
+          <th>...</th>
         </tr>
         <tr>
-          <td>January</td>
-          <td>$100</td>
+          <td>50€</td>
+          <td>Kater</td>
+          <td>Studieren</td>
         </tr>
       </table>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
     </main>
 </body>
 </html>
+
+//h1, p, img, table, tr, th, td, a, 
