--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -18,6 +18,8 @@
     <p>ein Tabelle hab ich auch noch eingefügt</p>
     <table>
         <tr>
+            <thead>Wochenplan</thead>
+            <tbody>Wochenende</tbody>
           <th>Samstag</th>
           <th>Sonntag</th>
           <th>...</th>
