--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -18,19 +18,20 @@
     <p>ein Tabelle hab ich auch noch eingefügt</p>
     <table>
         <tr>
-            <tr>
-                <thead>Wochenplan</thead>
-            </tr>
             
-            <tbody>Wochenende</tbody>
-          <th>Samstag</th>
-          <th>Sonntag</th>
-          <th>...</th>
+            <thead>
+                <th>Samstag</th>
+                <th>Sonntag</th>
+                <th>...</th>
+            </thead>
+
         </tr>
         <tr>
-          <td>50€</td>
-          <td>Kater</td>
-          <td>Studieren</td>
+            <tbody>
+                <td>50€</td>
+                <td>Kater</td>
+                <td>Studieren</td>
+            </tbody>
         </tr>
       </table>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
