--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -15,16 +15,14 @@
     <p>diese Tolle <a href="https://www.hochschwarzwald.de"> Website</a> ist nicht von mir gemacht.</p>
     <img src="mountains-6058896_640.jpg">
     <p>Hier sieht man ein schönes Landschaftsbild.</p>
-    <p>ein Tabelle hab ich auch noch eingefügt</p>
+    <p>eine Tabelle hab ich auch noch eingefügt</p>
     <table>
         <tr>
-            
             <thead>
                 <th>Samstag</th>
                 <th>Sonntag</th>
                 <th>...</th>
             </thead>
-
         </tr>
         <tr>
             <tbody>
@@ -33,7 +31,8 @@
                 <td>Studieren</td>
             </tbody>
         </tr>
-      </table>
+    </table>
+    <video src="/Users/leon/Documents/GitHub/GIS-SoSe-2021/A.1.2/Bee-39116.mp4"></video>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
     </main>
 </body>
