--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -32,9 +32,9 @@
             </tbody>
         </tr>
     </table>
-    <video src="Bee-39116.mp4" controls ></video>
+    <video src="Bee-39116.mp4"  ></video>
     <p>Bienen zu sehen ist auch immer schön.</p>
-    <audio src="music.mp3" controls ></audio>
+    <audio src="music.mp3" ></audio>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
     </main>
 </body>
