--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -7,7 +7,11 @@
     <title>Aufgabe 1.2 </title>
 </head>
 <body>
-    <header> <nav><p>Hallo</p></nav></header>
+    <header> 
+        <nav><p><a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A.1.2/index.html"> Hallo </a></p></nav>
+    
+    </header>
+
     <main>
     <h1 id="MeineArbeiten">Meine Arbeiten</h1>
     <p>Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
@@ -37,6 +41,10 @@
     <audio src="music.mp3" ></audio>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
     </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
 
