--- a/A.1.2/index1.html
+++ b/A.1.2/index1.html
@@ -13,7 +13,7 @@
     </header>
 
     <main>
-    <h1 id="MeineArbeiten">Meine Arbeiten</h1>
+    <h1 id="MeineArbeiten">Über Mich</h1>
     <p>Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
     <p>Hier ein paar Beispiele:</p>
     <p>diese Tolle <a href="https://www.hochschwarzwald.de"> Website</a> ist nicht von mir gemacht.</p>
