--- a/A.1.2/index1.html
+++ b/A.1.2/index1.html
@@ -8,10 +8,19 @@
 </head>
 <body>
     <header> 
-        <nav> <p> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A.1.2/index.html"> Hallo </a> </p></nav>
-    
+        <nav>
+            <table>
+                 <tr>
+                    <thead>
+                        <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A.1.2/index.html"> Meine Arbeiten </a></th>
+                        <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A.1.2/index1.html"> Über Mich </a></th>
+                        <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A.1.2/index2.html"> Kontakt </a></th>
+                    </thead>
+                        
+                 </tr>
+             </table>
+        </nav>
     </header>
-
     <main>
     <h1 id="MeineArbeiten">Über Mich</h1>
     <p>Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
@@ -36,9 +45,9 @@
             </tbody>
         </tr>
     </table>
-    <video src="Bee-39116.mp4"  ></video>
+    <video src="Bee-39116.mp4" controls ></video>
     <p>Bienen zu sehen ist auch immer schön.</p>
-    <audio src="music.mp3" ></audio>
+    <audio src="music.mp3" controls ></audio>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
     </main>
 
