--- a/A.1.2/index1.html
+++ b/A.1.2/index1.html
@@ -23,10 +23,9 @@
     </header>
     <main>
     <h1 id="MeineArbeiten">Über Mich</h1>
-    <p>Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
-    <p>Hier ein paar Beispiele:</p>
-    <p>diese Tolle <a href="https://www.hochschwarzwald.de"> Website</a> ist nicht von mir gemacht.</p>
-    <img src="mountains-6058896_640.jpg">
+    <p> Ich heiße Leon Herrmann und bin 19 Jahre alt.</p>
+    <p>Ich studiere Medieninformatik an der Hochschule Furtwangen.</p>
+    <img src="Ich.jpg" alt="Bild von Leon Herrmann">
     <p>Hier sieht man ein schönes Landschaftsbild.</p>
     <p>eine Tabelle hab ich auch noch eingefügt</p>
     <table>
