--- a/A.1.2/index1.html
+++ b/A.1.2/index1.html
@@ -26,27 +26,29 @@
     <p> Ich heiße Leon Herrmann und bin 19 Jahre alt.</p>
     <p>Ich studiere Medieninformatik an der Hochschule Furtwangen.</p>
     <img src="Ich.jpg" alt="Bild von Leon Herrmann">
-    <p>Hier sieht man ein schönes Landschaftsbild.</p>
-    <p>eine Tabelle hab ich auch noch eingefügt</p>
+    <p>Hier sieht man ein Bild von mir.</p>
+    <p>In dieser Tabelle steht mein Wochenplan</p>
     <table>
         <tr>
             <thead>
-                <th>Samstag</th>
-                <th>Sonntag</th>
+                <th>Montag</th>
+                <th>Dienstag</th>
                 <th>...</th>
             </thead>
         </tr>
         <tr>
             <tbody>
-                <td>50€</td>
-                <td>Kater</td>
-                <td>Studieren</td>
+                <td>Computergrafik</td>
+                <td>Computergrafik</td>
+                <td>...</td>
             </tbody>
         </tr>
     </table>
-    <video src="Bee-39116.mp4" controls ></video>
-    <p>Bienen zu sehen ist auch immer schön.</p>
-    <audio src="music.mp3" controls ></audio>
+    <p>Meine Hobbys:</p>
+    <ol>
+        <li>Fußball</li>
+        <li>Musik</li>
+    </ol>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
     </main>
 
