--- a/A.1.2/index2.html
+++ b/A.1.2/index2.html
@@ -23,11 +23,11 @@
     </header>
     <main>
     <h1 id="MeineArbeiten">Kontakt</h1>
-    <p>Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
-    <p>Hier ein paar Beispiele:</p>
-    <p>diese Tolle <a href="https://www.hochschwarzwald.de"> Website</a> ist nicht von mir gemacht.</p>
+    
+    <p>Wie bin ich zu erreichen?</p>
+    <p>Mein Standort:</p>
     <img src="mountains-6058896_640.jpg">
-    <p>Hier sieht man ein schönes Landschaftsbild.</p>
+    
     <p>eine Tabelle hab ich auch noch eingefügt</p>
     <table>
         <tr>
