--- a/A.1.2/index2.html
+++ b/A.1.2/index2.html
@@ -26,28 +26,31 @@
     
     <p>Wie bin ich zu erreichen?</p>
     <p>Mein Standort:</p>
-    <img src="mountains-6058896_640.jpg">
+    <img src="conifer-2178595_640.jpg" alt="Straße im Wald">
+    <p>Der Schwarzwald.</p>
     
-    <p>eine Tabelle hab ich auch noch eingefügt</p>
+    <p>Social Media:</p>
     <table>
         <tr>
             <thead>
-                <th>Samstag</th>
-                <th>Sonntag</th>
-                <th>...</th>
+                <th>Facebook</th>
+                <th>Instagram</th>
+                <th>Linkedin</th>
             </thead>
         </tr>
         <tr>
             <tbody>
-                <td>50€</td>
-                <td>Kater</td>
-                <td>Studieren</td>
+                <td><a href="https://www.facebook.com"> Hier </a></td>
+                <td><a href="https://www.instagram.com"> Hier </a></td>
+                <td><a href="https://www.linkedin.com"> Hier </a></td>
             </tbody>
         </tr>
     </table>
-    <video src="Bee-39116.mp4" controls ></video>
-    <p>Bienen zu sehen ist auch immer schön.</p>
-    <audio src="music.mp3" controls></audio>
+    <p>Sonstige Möglichkeiten:</p>
+    <ol>
+        <li>Anrufen</li>
+        <li>E-Mail</li>
+    </ol>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
     </main>
 
