--- a/A.1.2/index1.html
+++ b/A.1.2/index1.html
@@ -25,7 +25,7 @@
     <h1 id="MeineArbeiten">Über Mich</h1>
     <p> Ich heiße Leon Herrmann und bin 19 Jahre alt.</p>
     <p>Ich studiere Medieninformatik an der Hochschule Furtwangen.</p>
-    <img src="Ich.jpg" alt="Bild von Leon Herrmann">
+    <img src="media/Ich.jpg" alt="Bild von Leon Herrmann">
     <p>Hier sieht man ein Bild von mir.</p>
     <p>In dieser Tabelle steht mein Wochenplan</p>
     <table>
