--- a/A.1.2/index2.html
+++ b/A.1.2/index2.html
@@ -26,7 +26,7 @@
     
     <p>Wie bin ich zu erreichen?</p>
     <p>Mein Standort:</p>
-    <img src="conifer-2178595_640.jpg" alt="Straße im Wald">
+    <img src="media/conifer-2178595_640.jpg" alt="Straße im Wald">
     <p>Der Schwarzwald.</p>
     
     <p>Social Media:</p>
