--- a/A.1.2/index.html
+++ b/A.1.2/index.html
@@ -27,7 +27,7 @@
     <p>Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
     <p>Hier ein paar Beispiele:</p>
     <p>diese Tolle <a href="https://www.hochschwarzwald.de"> Website</a> ist nicht von mir gemacht.</p>
-    <img src="mountains-6058896_640.jpg" alt="Sonnenuntergang in den Bergen">
+    <img src="media/mountains-6058896_640.jpg" alt="Sonnenuntergang in den Bergen">
     <p>Hier sieht man ein schönes Landschaftsbild.</p>
     <p>eine Tabelle hab ich auch noch eingefügt</p>
     <table>       
@@ -49,9 +49,9 @@
         </tbody>
         
     </table>
-    <video src="Bee-39116.mp4"  controls ></video>
+    <video src="media/Bee-39116.mp4"  controls ></video>
     <p>Bienen zu sehen ist auch immer schön.</p>
-    <audio src="music.mp3" controls ></audio>
+    <audio src="media/music.mp3" controls ></audio>
     <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
     </main>
 
