--- a/A1.3/kontakt.html
+++ b/A1.3/kontakt.html
@@ -12,9 +12,9 @@
             <table>
                  <thead>
                     <tr>
-                        <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A.1.2/index.html"> Meine Arbeiten </a></th>
-                        <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A.1.2/index1.html"> Über Mich </a></th>
-                        <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A.1.2/index2.html"> Kontakt </a></th>
+                        <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/portfolio.html"> Meine Arbeiten </a></th>
+                        <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/person.html"> Über Mich </a></th>
+                        <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/kontakt.html"> Kontakt </a></th>
                     </tr>
                  </thead>
                         
