--- a/A1.3/person.html
+++ b/A1.3/person.html
@@ -8,47 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> 
+    <header id="navi"> 
         <nav>
-            <table>
-                <thead>
-                   <tr>
-                       <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/portfolio.html"> Meine Arbeiten </a></th>
-                       <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/person.html"> Über Mich </a></th>
-                       <th> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/kontakt.html"> Kontakt </a></th>
-                   </tr>
-                </thead>
-                       
-            </table>
+           <ul>
+               <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/portfolio.html"> Meine Arbeiten </a> </li>
+               <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/person.html"> Über Mich </a></li>
+               <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/kontakt.html"> Kontakt </a></li>
+           </ul>
         </nav>
-    </header>
+</header>
     <main>
-        <h1 id="MeineArbeiten">Über Mich</h1>
-        <p> Ich heiße Leon Herrmann und bin 19 Jahre alt.</p>
-        <p>Ich studiere Medieninformatik an der Hochschule Furtwangen.</p>
-        <img src="media/Ich.jpg" alt="Bild von Leon Herrmann">
+        <div>
+            <h1 id="MeineArbeiten">über mich</h1>
+            <p class="Titel"> Ich heiße Leon Herrmann und bin 19 Jahre alt.</p>
+            <p class="Titel">Ich studiere Medieninformatik an der Hochschule Furtwangen.</p>
+        </div>
+         <img class="Media" src="media/Ich.jpg" alt="Bild von Leon Herrmann">
         <p>Hier sieht man ein Bild von mir.</p>
         <p>In dieser Tabelle steht mein Wochenplan</p>
         <table>
             <thead>
                 <tr>
-                    <th>Montag</th>
-                    <th>Dienstag</th>
-                    <th>...</th>
+                    <th class="kasten">Montag</th>
+                    <th class="kasten">Dienstag</th>
+                    <th class="kasten">...</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Computergrafik</td>
-                    <td>Computergrafik</td>
-                    <td>...</td>
+                    <td class="kasten">Computergrafik</td>
+                    <td class="kasten">Computergrafik</td>
+                    <td class="kasten">...</td>
                 </tr>
             </tbody>
         </table>
         <p>Meine Hobbys:</p>
-        <ol>
-            <li>Fußball</li>
-            <li>Musik</li>
+        <ol >
+            <li class="kasten">Fußball</li>
+            <li class="kasten">Musik</li>
         </ol>
         <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
         </main>
