--- a/A1.3/kontakt.html
+++ b/A1.3/kontakt.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,50 +8,43 @@
     <title>Aufgabe 1.3 </title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header id="navi"> 
+    <header id="navi">
         <nav>
-           <ul>
-               <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/portfolio.html"> Meine Arbeiten </a> </li>
-               <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/person.html"> Über Mich </a></li>
-               <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/kontakt.html"> Kontakt </a></li>
-           </ul>
+            <ul>
+                <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/portfolio.html"> Meine
+                        Arbeiten </a> </li>
+                <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/person.html"> Über Mich
+                    </a></li>
+                <li class="Aktuell"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/kontakt.html"> Kontakt
+                    </a></li>
+            </ul>
         </nav>
-</header>
+    </header>
     <main>
-        <div>
-             <h1 id="MeineArbeiten">kontakt</h1>
-             <p class="Titel">Wie bin ich zu erreichen?</p>
+        <div id="kreis">
+            <h1 id="MeineArbeiten">kontakt</h1>
+            <p class="Titel">Wie bin ich zu erreichen?</p>
         </div>
-   
-    
-    <p>Wie bin ich zu erreichen?</p>
-    <p>Mein Standort:</p>
-    <img class="Media" src="media/conifer-2178595_640.jpg" alt="Straße im Wald">
-    <p>Der Schwarzwald.</p>
-    
-    <p>Social Media:</p>
-    <table >
-        <thead>
-            <tr>
-                <th class="kasten"><a href="https://www.facebook.com"> Facebook </a></th>
-                <th class="kasten"><a href="https://www.instagram.com"> Instagram </a></th>
-                <th class="kasten"><a href="https://www.linkedin.com"> Linkedin </a></th>
-            </tr>
-        </thead>
 
-    </table>
-    <p>Sonstige Möglichkeiten:</p>
-    <ol > 
-        <li class="kasten">Anrufen</li>
-        <li class="kasten">E-Mail</li>
-    </ol>
-    <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
-    </main>
 
-    <footer>
+        <h2>KONTAKT</h2>
+        <div id="Kontakt">
+            <p class="Kasten">Vorname</p>
+            <p class="Kasten">Nachname</p>
+            <p class="Kasten">E-Mail</p>
+            <p class="Kasten">Nachricht</p>
+            <p id="anmerkung"> Mit Absenden dieser Nachricht bestätige ich den Datenschutz</p>
+            <p class="Kasten" id="absenden">absenden</p>
+        </div>
 
-    </footer>
+        <p>Mein Standort:</p>
+        <img class="Media" src="media/conifer-2178595_640.jpg" alt="Straße im Wald">
+        <p>Der Schwarzwald.</p>
+        <footer>
+
+        </footer>
 </body>
-</html>
 
+</html>
