--- a/A1.3/kontakt.html
+++ b/A1.3/kontakt.html
@@ -26,6 +26,10 @@
         <div id="kreis">
             <h1 id="MeineArbeiten">kontakt</h1>
             <p class="Titel">Wie bin ich zu erreichen?</p>
+            <nav>
+                <span class="fab fa-facebook-square"></span>
+                <span class="fab fa-instagram"></span>
+            </nav>
         </div>
 
 
