--- a/A1.3/person.html
+++ b/A1.3/person.html
@@ -22,6 +22,10 @@
             <h1 id="MeineArbeiten">über mich</h1>
             <p class="Titel"> Ich heiße Leon Herrmann und bin 19 Jahre alt.</p>
             <p class="Titel">Ich studiere Medieninformatik an der Hochschule Furtwangen.</p>
+            <nav>
+                <span class="fab fa-facebook-square"></span>
+                <span class="fab fa-instagram"></span>
+            </nav>
         </div>
         <h2>ABOUT</h2>
          <img class="Media" src="media/Ich.jpg" alt="Bild von Leon Herrmann">
