--- a/A1.3/kontakt.html
+++ b/A1.3/kontakt.html
@@ -15,10 +15,10 @@
             <ul>
                 <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/portfolio.html"> Meine
                         Arbeiten </a> </li>
-                <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/person.html"> Über Mich
-                    </a></li>
-                <li class="Aktuell"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/kontakt.html"> Kontakt
-                    </a></li>
+                <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/person.html"> Über
+                        Mich</a></li>
+                <li class="Aktuell"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/kontakt.html"> Kontakt</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -46,9 +46,10 @@
         <p>Mein Standort:</p>
         <img class="Media" src="media/conifer-2178595_640.jpg" alt="Straße im Wald">
         <p>Der Schwarzwald.</p>
-        <footer>
+    </main>
+    <footer>
 
-        </footer>
+    </footer>
 </body>
 
 </html>
