--- a/A1.3/kontakt.html
+++ b/A1.3/kontakt.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header id="navi">
-        <nav>
+    <header >
+        <nav id="navi">
             <ul>
                 <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/portfolio.html"> Meine
                         Arbeiten </a> </li>
