--- a/A1.3/person.html
+++ b/A1.3/person.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="navi"> 
-        <nav>
+    <header> 
+        <nav id="navi">
            <ul>
                <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/portfolio.html"> Meine Arbeiten </a> </li>
                <li class="Aktuell"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/person.html"> Über Mich </a></li>
