--- a/A1.3/kontakt.html
+++ b/A1.3/kontakt.html
@@ -39,9 +39,9 @@
             <p class="Kasten">Vorname</p>
             <p class="Kasten">Nachname</p>
             <p class="Kasten">E-Mail</p>
-            <p class="Kasten" id="absenden">Nachricht</p>
+            <p class="Kasten" id="Nachricht">Nachricht</p>
             <p id="anmerkung"> Mit Absenden dieser Nachricht bestätige ich den Datenschutz</p>
-            <p class="Kasten" >absenden</p>
+            <p class="Kasten" id="absenden" >absenden</p>
         </div>
 
         <p>Mein Standort:</p>
