--- a/A1.4/portfolio.html
+++ b/A1.4/portfolio.html
@@ -14,11 +14,11 @@
     <header >
         <nav id="navi">
             <ul>
-                <li class="Aktuell"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/portfolio.html"> Meine
+                <li class="Aktuell"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.4/portfolio.html"> Meine
                         Arbeiten </a> </li>
-                <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/person.html"> Über Mich
+                <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.4/person.html"> Über Mich
                     </a></li>
-                <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.3/kontakt.html"> Kontakt
+                <li class="Navigation"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.4/kontakt.html"> Kontakt
                     </a></li>
             </ul>
         </nav>
@@ -36,11 +36,11 @@
         </div>
 
         <h2>BEISPIELE</h2>
-        <img class="Media" src="media/mountains-6058896_640.jpg" alt="Sonnenuntergang in den Bergen">
+        <img class="Media" src="A1.4/media/mountains-6058896_640.jpg" alt="Sonnenuntergang in den Bergen">
         <p>Hier sieht man ein schönes Landschaftsbild.</p>
-        <video class="Media" src="media/Bee-39116.mp4" controls></video>
+        <video class="Media" src="A1.4/media/Bee-39116.mp4" controls></video>
         <p>Bienen zu sehen ist auch immer schön.</p>
-        <audio class="Media" src="media/music.mp3" controls></audio>
+        <audio class="Media" src="A1.4/media/music.mp3" controls></audio>
         <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
        
 
