--- a/A1.4/portfolio.html
+++ b/A1.4/portfolio.html
@@ -36,11 +36,11 @@
         </div>
 
         <h2>BEISPIELE</h2>
-        <img class="Media" src="A1.4/media/mountains-6058896_640.jpg" alt="Sonnenuntergang in den Bergen">
+        <img class="Media" src="media/mountains-6058896_640.jpg" alt="Sonnenuntergang in den Bergen">
         <p>Hier sieht man ein schönes Landschaftsbild.</p>
-        <video class="Media" src="A1.4/media/Bee-39116.mp4" controls></video>
+        <video class="Media" src="media/Bee-39116.mp4" controls></video>
         <p>Bienen zu sehen ist auch immer schön.</p>
-        <audio class="Media" src="A1.4/media/music.mp3" controls></audio>
+        <audio class="Media" src="media/music.mp3" controls></audio>
         <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
        
 
