--- a/A1.4/portfolio.html
+++ b/A1.4/portfolio.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/6427a5f677.js" crossorigin="anonymous"></script>
-    <title>Aufgabe 1.3 </title>
+    <title>Aufgabe 1.4 </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header >
+    <header>
         <nav id="navi">
             <ul>
                 <li class="Aktuell"> <a href="https://leonhrrmnn.github.io/GIS-SoSe-2021/A1.4/portfolio.html"> Meine
@@ -27,8 +27,8 @@
     <main>
         <div id="kreis">
             <h1 id="MeineArbeiten">portfolio</h1>
-            <p class="Titel"> Leon Herrmann</p>
-            <p class="Titel"> Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
+            <p> Leon Herrmann</p>
+            <p> Servus auf der Website werden nicht meine Arbeiten präsentiert</p>
             <nav>
                 <span class="fab fa-facebook-square"></span>
                 <span class="fab fa-instagram"></span>
@@ -42,7 +42,7 @@
         <p>Bienen zu sehen ist auch immer schön.</p>
         <audio class="Media" src="media/music.mp3" controls></audio>
         <p> <a href="#MeineArbeiten"> Hier</a> kommst du wieder zum Anfang.</p>
-       
+
 
     </main>
 
