--- a/A2.2/A2.2.html
+++ b/A2.2/A2.2.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aufgabe 2.2</title>
     <script src="A2.2.js"></script>
-   
+
+
 </head>
+
 <body>
-    
+    <canvas id="myCanvas" width="500" height="400"></canvas>
 </body>
+
 </html>
