--- a/A2.2/A2.2.html
+++ b/A2.2/A2.2.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aufgabe 2.2</title>
-    <script src="A2.2.js"></script>
+    <script src="A2.2.js" defer></script>
 
 
 </head>
 
 <body>
-    <canvas id="myCanvas" width="500" height="400"></canvas>
+    <canvas id="canvas1" width="500" height="500"></canvas>
+
+    <canvas id="canvas2" width="800" height="500"></canvas>
 </body>
 
 </html>
