--- a/A2.4/burger.html
+++ b/A2.4/burger.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="Seite2">Aufgabe 2.4</title>
+    <title id="Seite4">Aufgabe 2.4</title>
     <script src="data.js" defer ></script>
     <script src="A2.4.js" defer ></script>
     <link rel="stylesheet" href="style.css">
@@ -12,9 +12,7 @@
 <body>
    
         <h1> Meine Burger</h1>
-        <p> DIE PATTYS</p>
-
-        <p> Wähle dir ein Patty aus!</p>
+        <p> DEIN BURGER</p>
         <div id="Burger"> </div>
 
    
