--- a/A2.4/burger.html
+++ b/A2.4/burger.html
@@ -11,9 +11,12 @@
 </head>
 <body>
    
-        <h1> Meine Burger</h1>
+        <h1> My Burger</h1>
         <p> DEIN BURGER</p>
-        <div id="Burger"> </div>
+        <div id="Ausgewählt"></div>
+        <p id="text"></p>
+        <h1> Wir wünschen dir einen Guten Appetit!</h1>
+   
 
    
         
