--- a/A2.4/pattys.html
+++ b/A2.4/pattys.html
@@ -11,12 +11,13 @@
 </head>
 <body>
    
-        <h1> Meine Burger</h1>
+        <h1> My Burger</h1>
         <p> DIE PATTYS</p>
 
         <p> Wähle dir ein Patty aus!</p>
         <div id="Burger"> </div>
-
+        <p>bisher Ausgewählt:</p>
+        <div id="Ausgewählt"></div>
    
         
         
