--- a/A2.4/soßen.html
+++ b/A2.4/soßen.html
@@ -11,12 +11,13 @@
 </head>
 <body>
    
-        <h1> Meine Burger</h1>
+        <h1> My Burger</h1>
         <p> DIE SOßEN</p>
 
         <p> Wähle dir eine Soße aus!</p>
         <div id="Burger"> </div>
-
+        <p>bisher Ausgewählt:</p>
+        <div id="Ausgewählt"></div>
    
         
         
