--- a/A2.5/soßen.html
+++ b/A2.5/soßen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="Seite3">Aufgabe 2.4</title>
+    <title id="Seite3">Soßen</title>
     <script src="A2.5.js" defer ></script>
     <link rel="stylesheet" href="style.css">
 </head>
