--- a/A2.5/burger.html
+++ b/A2.5/burger.html
@@ -12,6 +12,7 @@
    
         <h1> My Burger</h1>
         <p> DEIN BURGER</p>
+        <p id="display"></p>
         <div id="Ausgewählt"></div>
         <p id="text"></p>
         <h1> Wir wünschen dir einen Guten Appetit!</h1>
