--- a/A3.1/formular.html
+++ b/A3.1/formular.html
@@ -25,7 +25,7 @@
         <input placeholder="PLZ" class="Kasten" type="text" id="lname" name="PLZ">
         <input placeholder="Ort" class="Kasten" type="text" id="lname" name="Ort">
         <input type="email" class="Kasten" id="ename" name="fname" placeholder="E-Mail">
-        <button id="button">Abschicken</button>
+        <button type="button" id="button">Abschicken</button>
         <p id="zurückgeben"></p>
     </form>
 </body>
