--- a/A3.1/formular.html
+++ b/A3.1/formular.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <h1> Aufgabe 1 mit GET</h1>
     <form method="GET" action="https://testleonhrrmnn.herokuapp.com">
 
@@ -17,8 +18,10 @@
         <input placeholder="PLZ & Ort" class="Kasten" type="text" id="lname" name="fname">
         <button type="submit">Abschicken</button>
     </form>
-    <h1> Aufgabe 2 mit Fetch</h1>
-    <form id="fetch">
+   
+    
+    <form>
+        <h1> Aufgabe 2 mit Fetch</h1>
 
         <input placeholder="Straße" class="Kasten" type="text" id="fname" name="Straße">
         <input placeholder="Hausnummer" class="Kasten" type="text" id="fname" name="Nummer">
@@ -28,6 +31,8 @@
         <button type="button" id="button">Abschicken</button>
         <p id="zurückgeben"></p>
     </form>
+
+    
 </body>
 
 </html>
