--- a/A3.1/formular.html
+++ b/A3.1/formular.html
@@ -10,16 +10,6 @@
 </head>
 
 <body>
-
-    <h1> Aufgabe 1 mit GET</h1>
-    <form method="GET" action="https://testleonhrrmnn.herokuapp.com">
-
-        <input placeholder="Straße & Hausnummer" class="Kasten" type="text" id="fname" name="fname">
-        <input placeholder="PLZ & Ort" class="Kasten" type="text" id="lname" name="fname">
-        <button type="submit">Abschicken</button>
-    </form>
-   
-    
     <form>
         <h1> Aufgabe 2 mit Fetch</h1>
 
@@ -30,6 +20,15 @@
         <input type="email" class="Kasten" id="ename" name="fname" placeholder="E-Mail">
         <button type="button" id="button">Abschicken</button>
         <p id="zurückgeben"></p>
+    </form>
+    <p id="display" ></p>
+
+    <h1> Aufgabe 1 mit GET</h1>
+    <form method="GET" action="https://testleonhrrmnn.herokuapp.com">
+
+        <input placeholder="Straße & Hausnummer" class="Kasten" type="text" id="fname" name="fname">
+        <input placeholder="PLZ & Ort" class="Kasten" type="text" id="lname" name="fname">
+        <button type="submit">Abschicken</button>
     </form>
 
     
