--- a/A3.2/index.html
+++ b/A3.2/index.html
@@ -6,21 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aufgabe 3.2</title>
-    <script src="./client/script.js" defer></script>
+    <script src="client/script.js" defer></script>
 </head>
 
 <body>
-    <form>
+    <form id="Data">
         <input placeholder="Straße" class="Kasten" type="text" id="fname" name="Straße">
         <input placeholder="Hausnummer" class="Kasten" type="text" id="fname" name="Nummer">
         <input placeholder="PLZ" class="Kasten" type="text" id="lname" name="PLZ">
         <input placeholder="Ort" class="Kasten" type="text" id="lname" name="Ort">
-        <input type="email" class="Kasten" id="ename" name="fname" placeholder="E-Mail">
+        <input type="email" class="Kasten" id="ename" name="eMail" placeholder="E-Mail">
         <button type="button" id="JSON">Abschicken JSON</button>
         <button type="button" id="HTML">Abschicken HTML</button>
-        <p id="zurückgeben"></p>
     </form>
-    
+
 </body>
 
 </html>
