--- a/A3.4/index.html
+++ b/A3.4/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aufgabe 3.4 </title>
-    <script src="./server/server.js" defer></script>
+    <script src="./client/script.js" defer></script>
 </head>
 <body>
     <form>
