--- a/Modulprüfung/hinzufügen.html
+++ b/Modulprüfung/hinzufügen.html
@@ -28,7 +28,7 @@
 
             <form>
                 <div class="Formular">
-                    <input placeholder="Rezeptname" class="name" type="text" id="fname" name="Rezeptname">
+                    <input placeholder="Rezeptname" class="name" type="text" id="fname" name="rezeptname">
                 </div>
                 <div class="Formular">
                     <!-- 
@@ -36,18 +36,18 @@
                 </div>
                 
                 <h4>Zutaten:</h4>
-                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="Zutat">
-                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="Zutat">
-                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="Zutat">
-                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="Zutat">
-                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="Zutat">
-                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="Zutat">
-                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="Zutat">
-                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="Zutat">
-                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="Zutat">
-                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="Zutat">
+                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="zutat">
+                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="zutat">
+                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="zutat">
+                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="zutat">
+                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="zutat">
+                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="zutat">
+                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="zutat">
+                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="zutat">
+                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="zutat">
+                <input placeholder="Zutat" class="Zutaten" type="text" id="fname" name="zutat">
                 <h4>Zubereitung:</h4>
-                <input placeholder="Zubereitung" class="Zutaten" type="text" id="fname" name="ZubereitungText">
+                <input placeholder="Zubereitung" class="Zutaten" type="text" id="fname" name="zubereitungText">
 
                 <button type="button" id="abbruch">Abbrechen</button>
                 <button type="button" id="senden">Hinzufügen</button>
